@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Export free/busy URL to vCard (Request #12915).
 [mjr] Fix listTimeObjects API when format_in attribute parameter is changed
       from default (Bug #11891).
 [mjr] Add API support for supporting multiple addressbooks via ActiveSync.
